--- a/public/index.html
+++ b/public/index.html
@@ -4,11 +4,11 @@
   <meta charset="utf-8" />
   <title>Grandpa's Turn – Hand-turned bowls by Peter Schleihauf</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <link rel="stylesheet" href="/style.css" />
+  <link rel="stylesheet" href="./style.css" />
 </head>
 <body>
   <div class="container">
-    <img class="grid" src="/static/grid-sketch.jpg" />
+    <img class="grid" src="./static/grid-sketch.jpg" />
   </div>
 </body>
 </html>
